--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="nav_btn_saved">Saved</string>
     <string name="nav_btn_search">Search</string>
     <string name="menu_btn_search">Search</string>
+    <string name="menu_btn_about">About App</string>
     <string name="fab_save_movie">Save Movie</string>
     <string name="iv_movie_image">Movie Image</string>
     <string name="iv_movie_rating">Movie Rating</string>
@@ -18,5 +19,11 @@
     <string name="test_year">2011</string>
     <string name="test_vote">5.0</string>
     <string name="test_genre">Comedy</string>
+
+    <string name="tv_about_line_1">Made with ❤ by Serhii Sharipov</string>
+    <string name="tv_about_line_2">using Kotlin</string>
+    <string name="tv_about_line_3">and data from themoviedb.org</string>
+    <string name="tv_version">Version: </string>
+    <string name="test_version">1.0</string>
 
 </resources>
