--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="tv_about_line_3">and data from themoviedb.org</string>
     <string name="tv_version">Version: </string>
     <string name="test_version">1.0</string>
+    <string name="message_nothing_saved">Nothing has been saved yet</string>
 
 </resources>
