--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string name="app_name">MovieInfo</string>
+
+    <string name="title_search">Search movies</string>
+    <string name="title_saved">Saved movies</string>
+    <string name="title_popular">Popular movies</string>
+    <string name="title_about">About app</string>
     <string name="nav_btn_popular">Popular</string>
     <string name="nav_btn_saved">Saved</string>
     <string name="nav_btn_search">Search</string>
@@ -11,8 +16,14 @@
     <string name="iv_similar_movie_image">Similar Movie Image</string>
     <string name="toolbar_iv_movie_image">Movie Image</string>
 
-    <string name="error_msg">Failed to connect</string>
     <string name="btn_retry">Retry</string>
+    <string name="msg_failed_to_connect">Failed to connect</string>
+    <string name="msg_nothing_saved">Nothing has been saved yet</string>
+    <string name="msg_no_connection">No internet connection</string>
+    <string name="msg_network_failure">Network failure</string>
+    <string name="msg_conversion_error">Conversion error</string>
+    <string name="msg_movie_deleted">Successfully deleted movie</string>
+    <string name="msg_undo">Undo</string>
 
     <string name="test_title">Name one two three four five</string>
     <string name="test_description">Overview one two three four five Overview one two three four five</string>
@@ -23,8 +34,6 @@
     <string name="tv_about_line_1">Made with ❤ by Serhii Sharipov</string>
     <string name="tv_about_line_2">using Kotlin</string>
     <string name="tv_about_line_3">and data from themoviedb.org</string>
-    <string name="tv_version">Version: </string>
+    <string name="tv_version">Version:</string>
     <string name="test_version">1.0</string>
-    <string name="message_nothing_saved">Nothing has been saved yet</string>
-
 </resources>
