--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,6 +10,7 @@
     <string name="nav_btn_search">Поиск</string>
     <string name="menu_btn_search">Поиск</string>
     <string name="menu_btn_about">О приложении</string>
+    <string name="menu_btn_copy">Копировать название</string>
     <string name="fab_save_movie">Сохранить фильм</string>
     <string name="iv_movie_image">Изображение фильма</string>
     <string name="iv_movie_rating">Рейтинг фильма</string>
@@ -24,6 +25,7 @@
     <string name="msg_conversion_error">Ошибка преобразования</string>
     <string name="msg_movie_deleted">Фильм успешно удален</string>
     <string name="msg_undo">Отменить</string>
+    <string name="msg_copied">Скопировано</string>
 
     <string name="test_title">Название один, два, три, четыре, пять</string>
     <string name="test_description">Обзор один два три четыре пять Обзор один два три четыре пять</string>
