--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -10,6 +10,7 @@
     <string name="nav_btn_search">Пошук</string>
     <string name="menu_btn_search">Пошук</string>
     <string name="menu_btn_about">Про програму</string>
+    <string name="menu_btn_copy">Копіювати назву</string>
     <string name="fab_save_movie">Зберегти фільм</string>
     <string name="iv_movie_image">Зображення фільму</string>
     <string name="iv_movie_rating">Рейтинг фільму</string>
@@ -24,6 +25,7 @@
     <string name="msg_conversion_error">Помилка перетворення</string>
     <string name="msg_movie_deleted">Фільм успішно видалено</string>
     <string name="msg_undo">Скасувати</string>
+    <string name="msg_copied">Скопійовано</string>
 
     <string name="test_title">Назва один, два, три, чотири, п\'ять</string>
     <string name="test_description">Огляд один два три чотири п\'ять Огляд один два три чотири п\'ять</string>
