--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="nav_btn_search">Search</string>
     <string name="menu_btn_search">Search</string>
     <string name="menu_btn_about">About App</string>
+    <string name="menu_btn_copy">Copy title</string>
     <string name="fab_save_movie">Save Movie</string>
     <string name="iv_movie_image">Movie Image</string>
     <string name="iv_movie_rating">Movie Rating</string>
@@ -24,6 +25,7 @@
     <string name="msg_conversion_error">Conversion error</string>
     <string name="msg_movie_deleted">Successfully deleted movie</string>
     <string name="msg_undo">Undo</string>
+    <string name="msg_copied">Copied</string>
 
     <string name="test_title">Name one two three four five</string>
     <string name="test_description">Overview one two three four five Overview one two three four five</string>
