--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -26,6 +26,7 @@
     <string name="msg_movie_deleted">Фільм успішно видалено</string>
     <string name="msg_undo">Скасувати</string>
     <string name="msg_copied">Скопійовано</string>
+    <string name="msg_unknown_error">Сталася невідома помилка</string>
 
     <string name="test_title">Назва один, два, три, чотири, п\'ять</string>
     <string name="test_description">Огляд один два три чотири п\'ять Огляд один два три чотири п\'ять</string>
