--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="msg_movie_deleted">Successfully deleted movie</string>
     <string name="msg_undo">Undo</string>
     <string name="msg_copied">Copied</string>
+    <string name="msg_unknown_error">An unknown error occurred</string>
 
     <string name="test_title">Name one two three four five</string>
     <string name="test_description">Overview one two three four five Overview one two three four five</string>
